PY: Add login endpoint on server side.
